# waiter

./: Cargo.toml  README.md
config/: default.toml  dev.toml
crates/async_example/: Cargo.toml
crates/async_example/src/: main.rs
crates/waiter_codegen/: Cargo.toml
crates/waiter_codegen/src/: attr_parser.rs  component.rs  lib.rs  provider.rs
crates/waiter_codegen/src/component/: injector.rs  mod.rs  type_to_inject.rs
crates/waiter_core/: Cargo.toml
crates/waiter_core/src/: container.rs  container2.rs  deferred.rs  inject.rs  lib.rs
examples/: 1_get_started.rs  2_modules.rs  3_inject_options_list.rs  get_started.rs  get_started2.rs
src/: container.rs  deferred.rs  inject.rs  lib.rs
