[package]
name = "waiter_di"
version = "1.6.3"
edition = "2018"
description = "Dependency injection"
keywords = [ "dependency-injection", "inversion-of-control", "di", "ioc"]
repository = "https://github.com/dmitryb-dev/waiter"
license = "MIT"
readme = "README.md"
authors = [ "dmitryb.dev@gmail.com" ]

[workspace]
members = [ "crates/*" ]

[dependencies]
waiter_codegen = { path = "crates/waiter_codegen", version = "1.6.3" }
config = "0.9"
serde = { version = "1.0.115", features = [ "derive" ] }
regex = "1.3.9"
lazy_static = "1.4.0"
log = "0.4.11"

[features]
async = [ "waiter_codegen/async" ]