[package]
name = "waiter_di"
version = "1.6.6"
edition = "2018"
description = "Dependency injection"
keywords = [ "dependency-injection", "inversion-of-control", "di", "ioc"]
repository = "https://github.com/dmitryb-dev/waiter"
license = "MIT"
readme = "README.md"
authors = [ "dmitryb.dev@gmail.com" ]

[workspace]
members = [ "crates/*" ]

[dependencies]
waiter_codegen = { path = "crates/waiter_codegen", version = "1.6.5" }
config = "0.14.0"
serde = { version = "1.0.196", features = [ "derive" ] }
regex = "1.10.3"
lazy_static = "1.4.0"
log = "0.4.20"

[features]
async = [ "waiter_codegen/async" ]