[package]
name = "waiter_codegen"
version = "1.6.0"
edition = "2018"
description = "Macro for Waiter DI"
repository = "https://github.com/dmitryb-dev/waiter"
license = "MIT"
readme = "../../README.md"
authors = [ "dmitryb.dev@gmail.com" ]

[dependencies]
quote = "1.0.7"
regex = "1.3.9"

[dependencies.syn]
version = "1.0.38"
features = [ "full" ]

[lib]
proc-macro = true

[features]
async = []