[package]
name = "waiter_codegen"
version = "1.6.6"
edition = "2021"
description = "Macro for Waiter DI"
repository = "https://github.com/dmitryb-dev/waiter"
license = "MIT"
readme = "../../README.md"
authors = [ "dmitryb.dev@gmail.com" ]

[dependencies]
quote = "1.0.17"
regex = "1.5.5"
proc-macro2 = "1.0.37"

[dependencies.syn]
version = "1.0.91"
features = [ "full" ]

[lib]
proc-macro = true

[features]
async = []